A......... [ZBX-5116] prevented escaping forward slashes while encoding API response to JSON text (Cemeris)
.......PS. [ZBX-11036] fixed server not to synchronize IPMI configuration for new hosts without IPMI (vso)

--------------------------------------------------------------------------------
Changes for 3.2.7rc1

New features:

Bug fixes:
..F....... [ZBX-11549] fixed 'numeric value' error in dashboard for php 7 (gcalenko, Sasha)
..F....... [ZBX-11559] fixed jquery binded function call on form submit (miks)
..F....... [ZBX-11677] fixed wrong order of events in history list (miks)
..F....... [ZBX-11405] fixed conditions to display treeview button in triggers section (miks)
........S. [ZBX-12012] fixed resolving of Critical and Verbose event log levels by {ITEM.LOG.SEVERITY} macro (Sasha)
A......... [ZBX-12093] fixed removing of applications that are created from application prototypes (Sasha)

--------------------------------------------------------------------------------
Changes for 3.2.6

New features:
A.F....... [ZBX-1357] updated Czech, English (United States), Korean, Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.2.6rc1

Bug fixes:
A.F....... [ZBX-10253] fixed translation string and validation of TLS settings in host.create(), host.update() and host.massUpdate() methods; added variables to hosts array required by CHost::validateUpdate() method (miks)
........S. [ZBX-12121] fixed problem generation by timer process (gleb)
..F....... [ZBX-11536] fixed missing operator in event correlation form (miks)
..F....... [ZBX-11309] fixed collision of cookies name responsible for storing selected checkboxes (miks)
..F....... [ZBX-11981] fixed undefined index 'ns' in options output array (miks)
..F....... [ZBX-12116] fixed pagination in Maintenance page (Sasha)
A......... [ZBX-12108] fixed limit option in event.get method (Sasha)